<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/back"
                android:layout_margin="15dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_school_event"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_mono_bold"/>

    </LinearLayout>

    <!-- Event Type Selection -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp">

        <!-- Assessment -->
        <TextView
                android:id="@+id/assessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableTopCompat="@drawable/ic_assessment"
                android:text="@string/assessment"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_mono_bold"
                android:textAlignment="center"
                android:padding="15dp"/>

        <!-- Deadline -->
        <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableTopCompat="@drawable/ic_deadline"
                android:text="@string/deadline"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_mono_bold"
                android:textAlignment="center"
                android:padding="15dp"/>

        <!-- Class Time -->
        <TextView
                android:id="@+id/class_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableTopCompat="@drawable/ic_class_time"
                android:text="@string/class_time"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_mono_bold"
                android:textAlignment="center"
                android:padding="15dp"/>

        <!-- Study Session -->
        <TextView
                android:id="@+id/study_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableTopCompat="@drawable/ic_study_session"
                android:text="@string/study_session"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_mono_bold"
                android:textAlignment="center"
                android:padding="15dp"/>
    </LinearLayout>


</LinearLayout>