<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/gradient_circle"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">
        <!--  Logo  -->
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_plannr_blob"
                android:contentDescription="@string/app_name"/>

        <!--  Login Text  -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>


        <!--  Email Input  -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/transparent"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Input  -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/transparent"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Login Button  -->

        <!--  No account yet? Text  -->
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:onClick="clickLogin"
                android:backgroundTint="@color/periwinkle"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account_yet"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginTop="10dp"/>

        <!--  Sign Up Button  -->
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:onClick="clickSignup"
                android:backgroundTint="@color/periwinkle"/>
    </LinearLayout>
</ScrollView>