<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

    <!--  Piggy Bank Image View  -->
    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_expenses"
            android:contentDescription="@string/event"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"/>

    <!-- Expenses Text  -->
    <TextView
            android:id="@+id/tv_expense_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expenses"
            android:layout_marginStart="10dp"
            android:padding="20dp"/>

    <!--  Amount Text  -->
    <TextView
            android:id="@+id/tv_expense_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAlignment="textEnd"
            android:paddingVertical="20dp"/>

</LinearLayout>