<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!--  Action Bar  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical">

        <!--  Back Button  -->
        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickBack"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/back"/>

        <!--  Add Event Text  -->
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_school_event"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_mono_bold"
                android:layout_marginStart="15dp"
                android:gravity="start"/>

        <!--  Save Button  -->
        <ImageView
                android:id="@+id/iv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                android:contentDescription="@string/save"
                android:onClick="clickSaveEvent"/>
    </LinearLayout>

    <!--  Select Event Type  -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:menu="@menu/event_navigation"
            app:itemIconSize="35dp"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:itemRippleColor="@color/lavender"
            app:labelVisibilityMode="labeled"/>

    <!-- Add Event Name -->
    <EditText
            android:id="@+id/et_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/event_name"
            android:autofillHints="@string/event_name"

            android:textSize="20sp"
            android:ems="10"
            android:layout_margin="20dp"/>

    <!-- Add Event Date & Time -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="15dp">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_time"
                   android:contentDescription="@string/select_date"/>

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/select_date"

                android:textSize="15sp"
                android:padding="15dp"/>

        <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time"

                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:padding="15dp"/>

    </LinearLayout>

    <!-- Add Event Priority -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_priority"
                   android:contentDescription="@string/priority"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority"

                android:textSize="15sp"
                android:padding="15dp"/>

        <RadioGroup android:id="@+id/rg_priorities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

            <RadioButton android:id="@+id/rb_high_priority"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/high_priority"
                         />

            <RadioButton android:id="@+id/rb_med_priority"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/med_priority"

                         android:layout_marginStart="10dp"/>

            <RadioButton android:id="@+id/rb_low_priority"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/low_priority"
                         android:layout_marginStart="10dp"/>
        </RadioGroup>
    </LinearLayout>

    <!-- TO BE IMPLEMENTED IN PHASE 2: Select Course -->
<!--    <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingHorizontal="15dp">-->

<!--        <ImageView android:layout_width="24dp"-->
<!--                   android:layout_height="24dp"-->
<!--                   android:src="@drawable/ic_school"-->
<!--                   android:contentDescription="@string/select_date"/>-->

<!--        <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/course"-->
<!--                -->
<!--                android:textSize="15sp"-->
<!--                android:padding="15dp"/>-->

<!--        <Spinner-->
<!--                android:id="@+id/spn_courses"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->
<!--    </LinearLayout>-->

</LinearLayout>