<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".WelcomeActivity">

    <!-- Welcome to Text -->

    <!--  Logo  -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#070707"/>
    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_plannr_blob"
            app:layout_constraintTop_toBottomOf="@+id/welcome_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!--  Sign Up Button  -->
    <Button
            android:id="@+id/btn_sign_up_main"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginBottom="20dp"/>

    <!--  Login Button  -->
    <Button
            android:id="@+id/btn_login_main"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"

    />

</LinearLayout>