<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!--  Navigation Menu  -->
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:onClick="ClickLogo"
            android:src="@drawable/ic_plannr_blob"
            android:contentDescription="@string/app_name"/>

<!-- line divider -->
<!--    <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:background="@color/lavender"-->
<!--    />-->

    <!--  School  -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:fontFamily="@font/roboto_mono_bold"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_marginVertical="15dp"
            android:onClick="ClickSchool"
            app:drawableTopCompat="@drawable/ic_school"/>

<!--    &lt;!&ndash;  Life  &ndash;&gt;-->
<!--    <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/life"-->
<!--            android:fontFamily="@font/roboto_mono_bold"-->
<!--            android:textStyle="bold"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:padding="5dp"-->
<!--            android:layout_marginVertical="10dp"-->
<!--            android:onClick="ClickLife"-->
<!--            app:drawableTopCompat="@drawable/ic_home"/>-->

    <!--  Expenses  -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:fontFamily="@font/roboto_mono_bold"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_marginVertical="15dp"
            android:onClick="ClickExpenses"
            app:drawableTopCompat="@drawable/ic_expenses"/>

    <!--  Settings  -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:fontFamily="@font/roboto_mono_bold"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_marginVertical="15dp"
            android:onClick="ClickSettings"
            app:drawableTopCompat="@drawable/ic_settings"/>

</LinearLayout>