<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".Signup">
    <TextView
            android:layout_width="193dp"
            android:layout_height="96dp"
            android:text="@string/Expenses"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="70dp"
            app:layout_constraintVertical_bias="0.025"
            app:layout_constraintHorizontal_bias="0.376"
            android:fontFamily="@font/roboto_mono_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/expenses_title"/>


    <TextView
            android:layout_width="193dp"
            android:layout_height="96dp"
            android:text="@string/month"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            android:fontFamily="@font/roboto_mono_bold"
            android:textSize="18sp"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="150dp"
            android:textColor="#070707"
            android:id="@+id/expense_month"
            app:layout_constraintHorizontal_bias="0.747"/>
    <TextView
            android:layout_width="193dp"
            android:layout_height="96dp"
            android:text="@string/list_of_expenses"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.264"
            app:layout_constraintHorizontal_bias="0.142"
            android:fontFamily="@font/roboto_mono_bold"
            android:textSize="18sp"
            android:textColor="#070707"
            android:id="@+id/expense_list"/>
    <ImageButton
            android:id="@+id/arrow_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="50dp"
            android:layout_height="58dp"
            android:src="@drawable/left_button_background"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:background="#0000ffff"
            android:layout_marginTop="-290dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="1dp"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/left_arrow"/>



    </LinearLayout>